# SCTtools

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
header/: Graph.h  sctfile.h  support.h
src/: CMakeLists.txt  Graph.cc  main.cc  main.cpp  sctfile.cc  support.cc
